Cluster/monitoring-manifest/07-prom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  type: ClusterIP # 외부 노출이 필요하다면 NodePort나 Ingress 연동
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
