Cluster/monitoring-manifest/08-prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/24,192.168.2.0/24"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prom.studylink.click
      secretName: prom-tls
  rules:
    - host: prom.studylink.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
